# flac

./: .ormolu  .travis.yml  CHANGELOG.md  README.md  cabal.project  flac.cabal  stack.yaml
.github/workflows/: ci.yaml
Codec/Audio/: FLAC.hs
Codec/Audio/FLAC/: Decoder.hs  Encoder.hs  Metadata.hs  StreamDecoder.hs  StreamEncoder.hs  Type.hs  Types.hs  Util.hs
Codec/Audio/FLAC/Metadata/: CueSheet.hs  Internal.hs
Codec/Audio/FLAC/Metadata/Internal/: Level2Interface.hs  Object.hs  Types.hs
Codec/Audio/FLAC/Metadata/Internal/Level2Interface/: Helpers.hs
Codec/Audio/FLAC/StreamDecoder/: Internal.hs
Codec/Audio/FLAC/StreamDecoder/Internal/: Helpers.hs  Types.hs
Codec/Audio/FLAC/StreamEncoder/: Apodization.hs  Internal.hs
Codec/Audio/FLAC/StreamEncoder/Internal/: Helpers.hs  Types.hs
audio-samples/: 1ch-44100hz-16bit.rf64  2ch-11025hz-24bit.rf64  2ch-8000hz-8bit.rf64  sample.flac
cbits/: metadata_level2_helpers.c  metadata_level2_helpers.h  stream_decoder_helpers.c  stream_decoder_helpers.h  stream_encoder_helpers.c  stream_encoder_helpers.h
tests/: Main.hs
tests/Codec/Audio/FLAC/: MetadataSpec.hs  StreamDecoderSpec.hs  StreamEncoderSpec.hs
